[package]
name = "treesearch"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7"

[dependencies.ansi_term]
version="0.12"
optional=true

[features]
fuzzing=[]
eyecandy=["ansi_term"]
default=["eyecandy"]
